updated fonts for pages

--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Linking about.html with about.css -->
     <link rel="stylesheet" href="./css/projects.css">
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <title>Genesis Mangunay Projects Page</title>
 </head>
 
