--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Linking about.html with about.css -->
     <link rel="stylesheet" href="./css/about.css">
+    <!-- linking with fontawesome folder -->
+    <link rel="stylesheet" href="./css/all.min.css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,6 +33,7 @@
     <section class="Intro"> 
       <p>Hi, my name is </p>
       <h1>Genesis Mangunay.</h1>
+      <p>I like coffee and coding.</p>
       <p> I'm a Computer Engineering graduate 
           from  California <br> State University, 
           Bakersfield. Currently located in the <br> Sacramento area,
@@ -45,6 +48,9 @@
 
     <footer>
         <p>genesis.mangunay7@gmail.com</p>
+        <a href="https://github.com/gmangunay" target="blank"> <i class="fab fa-github"></i></a>                    <!-- github icon link -->
+        <a href="https://www.linkedin.com/in/genesis-mangunay/" target="blank"> <i class="fab fa-linkedin"></i> </a><!-- LinkedIn icon link -->
+        <a href="https://www.instagram.com/genesis_mangunay/" target="blank"> <i class="fab fa-instagram"></i> </a> <!-- instagram icon link -->
     </footer>
 </body>
 </html>
