--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,9 @@
 
         <footer>
             <p>genesis.mangunay7@gmail.com</p>
+            <a href="https://github.com/gmangunay" target="blank"> <i class="fab fa-github"></i></a>                    <!-- github icon link -->
+            <a href="https://www.linkedin.com/in/genesis-mangunay/" target="blank"> <i class="fab fa-linkedin"></i> </a><!-- LinkedIn icon link -->
+            <a href="https://www.instagram.com/genesis_mangunay/" target="blank"> <i class="fab fa-instagram"></i> </a> <!-- instagram icon link -->
         </footer>
 </body>
 </html>
