--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Linking about.html with about.css -->
     <link rel="stylesheet" href="./css/projects.css">
+    <!-- linking with fontawesome folder -->
+    <link rel="stylesheet" href="./css/all.min.css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,16 +39,44 @@
                on-board chips. Prior to <br>the completion of the project, I also worked on many path-planning 
                algorithms <br> such as BFS, DFS, Dijkstra, and A* on MATLAB.
             </p>
+            <div class="iframe-container1">
+                <!-- uploading youtube video -->
+                <!--Must replace ' /watch? ' '= to ' /embed/ '  -->
+                <!-- frameborder and allowfullscreen allows the user to click on expand window in video -->
+                <iframe width="420" height="315" src="https://www.youtube.com/embed/0NbVqedxP_Y" 
+                frameborder="0" allowfullscreen > </iframe>  
+            </div>
         </div>
 
-        <div class="iframe-container1">
-            <!-- uploading youtube video -->
-            <!--Must replace ' /watch? ' '= to ' /embed/ '  -->
-            <!-- frameborder and allowfullscreen allows the user to click on expand window in video -->
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/0NbVqedxP_Y" 
-            frameborder="0" allowfullscreen > </iframe>  
+        <div class="project-2">
+            <h2>Data Acquisition Project – Non-Contact Temperature Gun </h2>
+            <p>
+                Converted a Nerf blaster into a temperature reading non-contact device. The <br> component responsible 
+                for reading the target's temperature is the MLX90614 <br> Infrared sensor. The readings become inaccurate
+                if the sensor are outside of <br> the optimal range. To combat this, I implemented a HC-SR04 Ultrasonic sensor
+                <br>to calculate the distance from the target. An LCD screen displays target <br>temperatures along with distance
+                if the user is too far away. Features such as <br>LED indicators and a laser diode are also installed for target
+                acquisition and usability.<br> All of this is powered through an Arduino Nano and wasdeveloped on the Arduino IDE.
+            </p>
+            <div class="iframe-container2">
+                <!-- uploading youtube video -->
+                <!--Must replace ' /watch? ' '= to ' /embed/ '  -->
+                <!-- frameborder and allowfullscreen allows the user to click on expand window in video -->
+                <iframe width="420" height="315" src="https://www.youtube.com/embed/MD0KFqtX8xk" 
+                frameborder="0" allowfullscreen > </iframe>  
+            </div>
         </div>
-
+        <div class="project-3">
+            <h2>Senior Project - LED Electronic Ariel Flare (L.E.A.F)</h2>
+            <p>
+                Designed an autonomous drone that when deployed simulates an advanced becaon <br> of distress by emitting morse code.
+                Created our own dedicated flight controller module<br> through an Arduino Nano microcontroller as our drone would only
+                serve the purpose of <br>being deployed during an emergency (no recreational use). Implemented 18650 Lithium-ion<br> batteries
+                to power the 4 brushless motors installed. The Adafruit 9-dof Aboslute Orientation <br>IMU Fusion Breakout was another
+                key component in this project as it allowed us to calculate<br> the roll, pitch, and yaw of the drone. The whole frame 
+                was contructed by 3D printing in order<br> to save on cost and weight of the project. Project was halted due to the start of the pandemic.
+            </p>
+        </div>
         <footer>
             <p>genesis.mangunay7@gmail.com</p>
             <a href="https://github.com/gmangunay" target="blank"> <i class="fab fa-github"></i></a>                    <!-- github icon link -->
