--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Linking about.html with about.css -->
     <link rel="stylesheet" href="./css/contact.css">
+    <!-- linking with fontawesome folder -->
+    <link rel="stylesheet" href="./css/all.min.css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +27,9 @@
             <a href="contact.html">Contact</a>
         </nav>
 
-
+        <div class="locationMap">
+            <iframe src="https://maps.google.com/maps?q=Elk+Grove,+CA,+USA&output=embed" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
         <footer>
             <p>genesis.mangunay7@gmail.com</p>
             <a href="https://github.com/gmangunay" target="blank"> <i class="fab fa-github"></i></a>                    <!-- github icon link -->
