--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Linking about.html with about.css -->
     <link rel="stylesheet" href="./css/resume.css">
+    <!-- linking with fontawesome folder -->
+    <link rel="stylesheet" href="./css/all.min.css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +26,14 @@
             <a href="contact.html">Contact</a>
         </nav>
 
-
+        <header>
+            <h1>Resume</h1>
+        </header>
+        
+        <div class="resume">
+          <a href="https://www.linkedin.com/in/genesis-mangunay/" target="blank"><img src="./images/website_resume.png" alt="resume"></a>
+          <p>Click Resume</p>
+        </div>
         <footer>
             <p>genesis.mangunay7@gmail.com</p>
             <a href="https://github.com/gmangunay" target="blank"> <i class="fab fa-github"></i></a>                    <!-- github icon link -->
