--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,45 @@
             <a href="contact.html">Contact</a>
         </nav>
 
-        <div class="locationMap">
-            <iframe src="https://maps.google.com/maps?q=Elk+Grove,+CA,+USA&output=embed" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <header>
+            <h1>Contact</h1>
+        </header>
+        <div class="intro">
+            <h2>
+                Let's get in touch
+            </h2>
         </div>
+        <div class="form">
+            <form action="/action_page.php">
+                <label for="fname">
+                    First Name
+                </label>
+                <input type="text" id="fname" name="firstname" placeholder= "Your first name..">
+                <label for="lname">
+                    Last Name
+                </label>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                <label for="email">
+                    Email
+                </label>
+                <input type="text" id="email" name="email" placeholder="Your email address..">
+                <label for="subject">
+                    Subject
+                </label>
+                <input type="text" id="subject" name="subject" placeholder="Subject..">
+                <label for="message">
+                    Message
+                </label>
+                <textarea id="message" name="message" placeholder="Message.."> </textarea>
+                <button type="button" onclick="alert('Talk to you soon (:')">Submit</button>
+            </form>
+        </div>
+
+        <div class="locationMap">
+            <h2>Location</h2>
+            <iframe class="map" src="https://maps.google.com/maps?q=Elk+Grove,+CA,+USA&output=embed"  frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+
         <footer>
             <p>genesis.mangunay7@gmail.com</p>
             <a href="https://github.com/gmangunay" target="blank"> <i class="fab fa-github"></i></a>                    <!-- github icon link -->
