final touches: color and placement

--- a/projects.html
+++ b/projects.html
@@ -77,11 +77,15 @@
                 was contructed by 3D printing in order<br> to save on cost and weight of the project. Project was halted due to the start of the pandemic.
             </p>
         </div>
-        <footer>
+        <br>
+        <div>
+            <footer>
             <p>genesis.mangunay7@gmail.com</p>
             <a href="https://github.com/gmangunay" target="blank"> <i class="fab fa-github"></i></a>                    <!-- github icon link -->
             <a href="https://www.linkedin.com/in/genesis-mangunay/" target="blank"> <i class="fab fa-linkedin"></i> </a><!-- LinkedIn icon link -->
             <a href="https://www.instagram.com/genesis_mangunay/" target="blank"> <i class="fab fa-instagram"></i> </a> <!-- instagram icon link -->
-        </footer>
+            </footer>
+        </div>
+        <br>
 </body>
 </html>
