--- a/about.html
+++ b/about.html
@@ -45,12 +45,15 @@
     <article>
         <img id="profilepic" src="./images/IMG-7133.jpg">
     </article>
-
+    <br>
+    <div>
     <footer>
         <p>genesis.mangunay7@gmail.com</p>
         <a href="https://github.com/gmangunay" target="blank"> <i class="fab fa-github"></i></a>                    <!-- github icon link -->
         <a href="https://www.linkedin.com/in/genesis-mangunay/" target="blank"> <i class="fab fa-linkedin"></i> </a><!-- LinkedIn icon link -->
         <a href="https://www.instagram.com/genesis_mangunay/" target="blank"> <i class="fab fa-instagram"></i> </a> <!-- instagram icon link -->
     </footer>
+    </div>
+    <br>
 </body>
 </html>
