--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
                 Let's get in touch
             </h2>
         </div>
+        <!-- contact form -->
         <div class="form">
             <form action="/action_page.php">
                 <label for="fname">
@@ -65,12 +66,15 @@
             <h2>Location</h2>
             <iframe class="map" src="https://maps.google.com/maps?q=Elk+Grove,+CA,+USA&output=embed"  frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
-
+        <br>
+        <div> 
         <footer>
             <p>genesis.mangunay7@gmail.com</p>
             <a href="https://github.com/gmangunay" target="blank"> <i class="fab fa-github"></i></a>                    <!-- github icon link -->
             <a href="https://www.linkedin.com/in/genesis-mangunay/" target="blank"> <i class="fab fa-linkedin"></i> </a><!-- LinkedIn icon link -->
             <a href="https://www.instagram.com/genesis_mangunay/" target="blank"> <i class="fab fa-instagram"></i> </a> <!-- instagram icon link -->
         </footer>
+        </div>
+        <br>
 </body>
 </html>
