--- a/resume.html
+++ b/resume.html
@@ -34,11 +34,15 @@
           <a href="https://www.linkedin.com/in/genesis-mangunay/" target="blank"><img src="./images/website_resume.png" alt="resume"></a>
           <p>Click Resume</p>
         </div>
+        <br>
+        <div> 
         <footer>
             <p>genesis.mangunay7@gmail.com</p>
             <a href="https://github.com/gmangunay" target="blank"> <i class="fab fa-github"></i></a>                    <!-- github icon link -->
             <a href="https://www.linkedin.com/in/genesis-mangunay/" target="blank"> <i class="fab fa-linkedin"></i> </a><!-- LinkedIn icon link -->
             <a href="https://www.instagram.com/genesis_mangunay/" target="blank"> <i class="fab fa-instagram"></i> </a> <!-- instagram icon link -->
-        </footer>
+         </footer>
+    </div>
+    <br>
 </body>
 </html>
