changed to index.html

--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,8 @@
         <!-- Navigation Bar -->
         <nav class= "Navbar"> 
             <!-- logo will take you back to about page if clicked -->
-            <a href="about.html" target="blank"><img src="./images/logo-placer.png" alt="logo"></a>
-            <a href="about.html">About</a>
+            <a href="index.html" target="blank"><img src="./images/logo-placer.png" alt="logo"></a>
+            <a href="index.html">About</a>
             <a href="projects.html">Projects</a>
             <a href="resume.html">Resume</a>
             <a href="contact.html">Contact</a>
