--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
         <nav class= "Navbar">
             <!-- logo will take you back to about page if clicked -->
             <!-- target="blank" opens to the same page -->
-            <a href="about.html" target="blank"><img src="./images/logo-placer.png" alt="logo"></a>
-            <a href="about.html">About</a>
+            <a href="index.html" target="blank"><img src="./images/logo-placer.png" alt="logo"></a>
+            <a href="index.html">About</a>
             <a href="projects.html">Projects</a>
             <a href="resume.html">Resume</a>
             <a href="contact.html">Contact</a>
